Fixed overlapping div by making the about container scroll in the event of an overflow

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -2,7 +2,8 @@
 #about-container {
     padding-top: 5%;
     margin-top: 5%;
-    height: 100vh;
+    height: 100vh !important;
+    overflow-y: scroll;
 }
 
 .about-text {
@@ -43,6 +44,10 @@
     #about-header {
         font-size: 275%;
         padding-bottom: 2%;
+    }
+
+    .about-text {
+        font-size: 110%;
     }
 
 }
